# data_engineering_project

./: .gitignore  .pdm-python  .python-version  Dockerfile  README.md  ecl_web_to_gcs.py  etl_gcs_to_bq.py  etl_web_to_gcs.py  ingest_data.py  pyproject.toml
